aws_cluster/backend/aws_backend_kube_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: 325852638497.dkr.ecr.us-east-1.amazonaws.com/manual_gui_ecr:backend_test
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
      automountServiceAccountToken: false
